cka/poc1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-depl
  labels:
    app: nginx
    tier: poc
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      tier: poc
  template:
    metadata:
      labels:
        app: nginx
        tier: poc
    spec:
      containers:
      - name: nginx
        imagePullPolicy: IfNotPresent
        image: nginx:alpine
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "100m"
            memory: "256Mi"
          requests:
            cpu: "50m"
            memory: "126Mi"
