cka/poc1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-service
  labels:
    app: html
    tier: poc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: html # should match pod selector
  ports:
  - name: http
    port: 80 # service port
    targetPort: 80 # container port
    protocol: TCP
