cka/poc1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path:  /
        pathType: Prefix
        backend:
          service: 
            name: html-service
            port:
              number: 80
